hphp/test/quick/typedef_duplicate4.php.expectf
HipHop Fatal error: The type Something is already defined to a different class (Something) in %s on line 4
